crates/nits-review-core/tests/snapshots/render__unhighlighted__ignore_ws.snap
---
source: crates/nits-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 18,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 4,
    "deletions": 3,
    "gaps": [
      {
        "gap": 1,
        "row": 11
      }
    ]
  },
  "rows": [
    {
      "type": "HunkHeader",
      "text": "@@ -1,9 +1,10 @@"
    },
    {
      "type": "Context",
      "left": {
        "line_no": 1,
        "text": "use std::fmt;",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 1,
        "text": "use std::fmt;",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 2,
        "text": "",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 2,
        "text": "",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 3,
        "text": "fn main() {",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 3,
        "text": "fn main() {",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 4,
        "text": "    let x = 1;",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 4,
        "text": "    let x: u32 = 1;",
        "spans": [],
        "changed": [
          {
            "start": 9,
            "end": 14
          }
        ]
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 5,
        "text": "    let y = 2;",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 5,
        "text": "    let y = 2;",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 6,
        "text": "    println!(\"{}\", x + y);",
        "spans": [],
        "changed": [
          {
            "start": 4,
            "end": 18
          },
          {
            "start": 19,
            "end": 20
          },
          {
            "start": 21,
            "end": 22
          },
          {
            "start": 23,
            "end": 25
          }
        ]
      },
      "right": {
        "line_no": 6,
        "text": "    let z = 3;",
        "spans": [],
        "changed": [
          {
            "start": 4,
            "end": 7
          },
          {
            "start": 8,
            "end": 9
          },
          {
            "start": 10,
            "end": 11
          },
          {
            "start": 12,
            "end": 13
          }
        ]
      }
    },
    {
      "type": "Added",
      "right": {
        "line_no": 7,
        "text": "    println!(\"{}\", x + y + z);",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 7,
        "text": "}",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 8,
        "text": "}",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 8,
        "text": "",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 9,
        "text": "",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 9,
        "text": "fn helper(a: u32) -> u32 {",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 10,
        "text": "fn helper(a: u32) -> u32 {",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Expander",
      "hidden": 10,
      "dir": "Both",
      "gap": 1
    },
    {
      "type": "HunkHeader",
      "text": "@@ -20,5 +21,5 @@"
    },
    {
      "type": "Context",
      "left": {
        "line_no": 20,
        "text": "fn unchanged_8() {}",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 21,
        "text": "fn unchanged_8() {}",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 21,
        "text": "",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 22,
        "text": "",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 22,
        "text": "fn tail() -> bool {",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 23,
        "text": "fn tail() -> bool {",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 23,
        "text": "    true",
        "spans": [],
        "changed": [
          {
            "start": 4,
            "end": 8
          }
        ]
      },
      "right": {
        "line_no": 24,
        "text": "    false",
        "spans": [],
        "changed": [
          {
            "start": 4,
            "end": 9
          }
        ]
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 24,
        "text": "}",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 25,
        "text": "}",
        "spans": [],
        "changed": []
      }
    }
  ]
}
